--- a/port2.html
+++ b/port2.html
@@ -1,17 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zachary Marshall — Video Editor</title>
-  <meta name="description" content="Zachary Marshall — professional video editor based in Phoenix, AZ. Demo reel + selected work." />
-
-  <!-- Optional: tasteful type pair (fast + widely cached). Remove if you want 100% system fonts. -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:opsz@8..60&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-
-  <style>
+<!-- wp:html -->
+<p>&lt;!doctype html&gt;</p>
+<p>&nbsp;</p>
+<!-- Optional: tasteful type pair (fast + widely cached). Remove if you want 100% system fonts. -->
+<p>&nbsp;</p>
+<p><style>
     :root{
       /* Core */
       --bg: #07060a;
@@ -400,85 +392,35 @@
       .corner-left, .corner-right{ position: static; margin: 0 var(--g) 10px; }
       .wrap{ padding-bottom: 40px; }
     }
-  </style>
-</head>
-
-<body>
-  <!-- Tiny links (left) -->
-  <div class="corner-left" aria-label="Links">
-    <span class="dot" aria-hidden="true"></span>
-    <a href="https://www.instagram.com/zach70sshow/" target="_blank" rel="noreferrer">IG</a>
-    <a href="https://www.youtube.com/@ZacharyMarshall" target="_blank" rel="noreferrer">YouTube</a>
-    <a href="https://www.linkedin.com/in/zachary-marshall-18a837149/" target="_blank" rel="noreferrer">LinkedIn</a>
-    <a href="https://ytjobs.co/talent/profile/249905" target="_blank" rel="noreferrer">YT Jobs</a>
-  </div>
-
-  <!-- Email (right) -->
-  <div class="corner-right" aria-label="Email">
-    <a href="mailto:Zacharycolemarshall@gmail.com">Zacharycolemarshall@gmail.com</a>
-  </div>
-
-  <main class="wrap">
-    <section class="hero">
-      <div class="hero-top">
-        <h1 class="name">
-          Zachary<br/>
-          <span class="accent">Marshall</span>
-        </h1>
-
-        <p class="bio">
-          Professional video editor based in <strong>Phoenix, AZ</strong>.
-          Full-time with <strong>Pace Morby</strong> + <strong>Subto</strong>.
-          I cut for retention, clarity, and “how did this already end?” pacing.
-        </p>
-      </div>
-
-      <div class="rule"></div>
-
-      <div class="reel-wrap" aria-label="Demo reel">
-        <div class="reel-label"><span class="dot" aria-hidden="true"></span> Demo Reel</div>
-        <iframe
-          class="reel"
-          title="Zachary Marshall — Demo Reel"
-          src="https://www.youtube.com/embed/UJxDBGAlojc?rel=0&modestbranding=1&playsinline=1"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </div>
-    </section>
-
-    <section class="section" aria-label="Selected work">
-      <div class="tabs" role="tablist" aria-label="Categories">
-        <button class="tab" role="tab" aria-selected="true" data-cat="youtube">YouTube</button>
-        <button class="tab" role="tab" aria-selected="false" data-cat="podcasts">Podcasts</button>
-        <button class="tab" role="tab" aria-selected="false" data-cat="misc">Misc</button>
-      </div>
-
-      <div class="grid" id="grid" aria-live="polite"></div>
-    </section>
-  </main>
-
-  <!-- Modal -->
-  <div class="modal" id="modal" aria-hidden="true">
-    <div class="modal-card" role="dialog" aria-modal="true" aria-label="Video player">
-      <div class="modal-top">
-        <div class="modal-title" id="modalTitle">
-          <span class="dot" aria-hidden="true"></span> Playing
-        </div>
-        <button class="close" id="closeBtn" type="button">Close</button>
-      </div>
-      <iframe
-        class="modal-iframe"
-        id="modalFrame"
-        title="Video"
-        src=""
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
-    </div>
-  </div>
-
-  <script>
+  </style></p>
+<!-- Tiny links (left) -->
+<div class="corner-left" aria-label="Links"><a href="https://www.instagram.com/zach70sshow/" target="_blank" rel="noopener noreferrer">IG</a> <a href="https://www.youtube.com/@ZacharyMarshall" target="_blank" rel="noopener noreferrer">YouTube</a> <a href="https://www.linkedin.com/in/zachary-marshall-18a837149/" target="_blank" rel="noopener noreferrer">LinkedIn</a> <a href="https://ytjobs.co/talent/profile/249905" target="_blank" rel="noopener noreferrer">YT Jobs</a></div>
+<!-- Email (right) -->
+<div class="corner-right" aria-label="Email"><a href="mailto:Zacharycolemarshall@gmail.com">Zacharycolemarshall@gmail.com</a></div>
+<main class="wrap">
+<section class="hero">
+<div class="hero-top">
+<h1 class="name">Zachary<br /><span class="accent">Marshall</span></h1>
+<p class="bio">Video editor for 13 years, with a background in marketing. I've worked on campaigns for brands like <strong>1-800-Flowers</strong>, <strong>Arcbound</strong>, and <strong>Avadel</strong>. Full-time YouTube editor for <strong>Pace Morby</strong>, and <strong>New Reach Education</strong>. A handful of short films, personal projects, and various other work.</p>
+</div>
+<div class="rule"> </div>
+<div class="reel-wrap" aria-label="Demo reel">
+<div class="reel-label">Demo Reel</div>
+<iframe class="reel" title="Zachary Marshall — Demo Reel" src="https://www.youtube.com/embed/UJxDBGAlojc?rel=0&amp;modestbranding=1&amp;playsinline=1" allowfullscreen="allowfullscreen"></iframe></div>
+</section>
+<section class="section" aria-label="Selected work">
+<div class="tabs" role="tablist" aria-label="Categories"><button class="tab" role="tab" aria-selected="true" data-cat="youtube">YouTube</button> <button class="tab" role="tab" aria-selected="false" data-cat="podcasts">Podcasts</button> <button class="tab" role="tab" aria-selected="false" data-cat="misc">Misc</button></div>
+<div id="grid" class="grid" aria-live="polite"> </div>
+</section>
+</main><!-- Modal -->
+<div id="modal" class="modal" aria-hidden="true">
+<div class="modal-card" role="dialog" aria-modal="true" aria-label="Video player">
+<div class="modal-top">
+<div id="modalTitle" class="modal-title">Playing</div>
+<button id="closeBtn" class="close" type="button">Close</button></div>
+<iframe id="modalFrame" class="modal-iframe" title="Video" src="" allowfullscreen="allowfullscreen"></iframe></div>
+</div>
+<p><script>
     // ---------- Helpers ----------
     function escapeHtml(str){
       return String(str)
@@ -533,19 +475,30 @@
         "https://youtu.be/fWCICcXAjlc?si=ZybYpEq1rjPJ9pkB",
         "https://youtu.be/j7tstp_JXL0?si=5s4udZ1zw1f_c2rV",
         "https://youtu.be/hZM-tgonf2M?si=CvcjIuRL_YLK-IXU",
+        "https://youtu.be/Pb3NAhqbaRI?si=OLmHVVXTdaTrQ2gF",
         "https://youtu.be/O1DH6Ri_kF0?si=FEmz-MLYKFx4fubx"
       ],
       podcasts: [
         "https://www.youtube.com/watch?v=EQJ7Iur4YdQ",
         "https://youtu.be/GVn0nkDxL_M?si=9Zk1-y5ao6tc4Pnl",
         "https://youtu.be/lEcJj_omaBg?si=0j2qEQB-bVuTG4FV",
+        "https://youtu.be/UWv-XMvDhuc?si=nZNk7irGJ_RFTdzS",
+        "https://youtu.be/mwcetmWwdRY?si=gXOsDFZH-SY7IOby",
         "https://youtu.be/DObamfcjcQg?si=yJ2pmwi732fMtn1I"
+      ],
+            ads: [
+        "https://youtu.be/oVgTXXDqW2Q?si=u4AQVUjNEFpj__Nt",
+        "https://youtu.be/nX4zFGIlEZA?si=_psnP_aiffzv2YYg",
+        "https://youtu.be/GLWC2M-OL2c?si=gOD70nIOXrravmA9"
       ],
       misc: [
         "https://youtu.be/Rd4wmaq6o84?si=UXtDSzPEP-8wfq1K",
         "https://youtu.be/sku6gwDS-vA?si=gUvRTrA0gDMGUaHi",
         "https://youtu.be/oo0C0Ytybro?si=XSop8OBj9ybK3df6",
         "https://youtu.be/8HgtRIzillo?si=cwhzassjdMMv3VlT",
+        "https://youtu.be/nKBKSGJoanI?si=2z4Yx9Acs61d6V0I",
+        "https://www.youtube.com/watch?v=apv0QmEq3bc",
+        "https://youtu.be/IVs0GoPI4mI?si=5vhFt8Nvq659iEr6",
         "https://youtu.be/waseMxrWONA?si=8Um3l9RQTAMMIG4u"
       ]
     };
@@ -665,6 +618,7 @@
 
     // Default
     setActive("youtube");
-  </script>
-</body>
-</html>
+  </script></p>
+<!-- /wp:html -->
+
+<!-- wp:paragraph -->
