--- a/port2.html
+++ b/port2.html
@@ -409,7 +409,13 @@
 <iframe class="reel" title="Zachary Marshall — Demo Reel" src="https://www.youtube.com/embed/UJxDBGAlojc?rel=0&amp;modestbranding=1&amp;playsinline=1" allowfullscreen="allowfullscreen"></iframe></div>
 </section>
 <section class="section" aria-label="Selected work">
-<div class="tabs" role="tablist" aria-label="Categories"><button class="tab" role="tab" aria-selected="true" data-cat="youtube">YouTube</button> <button class="tab" role="tab" aria-selected="false" data-cat="podcasts">Podcasts</button> <button class="tab" role="tab" aria-selected="false" data-cat="misc">Misc</button></div>
+<div class="tabs" role="tablist" aria-label="Categories">
+  <button class="tab" role="tab" aria-selected="true" data-cat="youtube">YouTube</button>
+  <button class="tab" role="tab" aria-selected="false" data-cat="podcasts">Podcasts</button>
+  <button class="tab" role="tab" aria-selected="false" data-cat="ads">Ads</button>
+  <button class="tab" role="tab" aria-selected="false" data-cat="misc">Misc</button>
+</div>
+<div id="grid" class="grid" aria-live="polite"></div>
 <div id="grid" class="grid" aria-live="polite"> </div>
 </section>
 </main><!-- Modal -->
