--- a/az-now-live.html
+++ b/az-now-live.html
@@ -977,7 +977,7 @@
     }
 
     /******************************************************************
-     * LIVE DATA STATE
+     * LIVE DATA STATEe
      ******************************************************************/
     let state = {
       cams: [],
