--- a/az-now-live.html
+++ b/az-now-live.html
@@ -77,7 +77,7 @@
    STEP 1 — PUT YOUR API KEY HERE (ONLY HERE)
    ===================================================== */
 
-const AZ511_API_KEY = "PASTE_YOUR_API_KEY_HERE";
+const AZ511_API_KEY = "03228dfc7c4d4980a28a69c30fb9b8bf";
 
 /* =====================================================
    DO NOT EDIT BELOW THIS LINE (for now)
