--- a/az-now-live.html
+++ b/az-now-live.html
@@ -21,6 +21,8 @@
       --radius: 18px; --radius2: 14px;
       --hdrH: 60px; --tickerH: 56px;
       --pad: 14px;
+--scale: 0.31;          /* <<< change this */
+--origin: top left;     /* keeps it anchored */
 
       --font-ui: "IBM Plex Sans", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       --font-retro: "VT323", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
@@ -41,17 +43,17 @@
     }
 
     .bar{
-      width:100vw;
-      height:100vh;
-      position:relative;
-      overflow:hidden;
-      background:
-        linear-gradient(90deg, #ffffff14, #ffffff08 40%, #ffffff12),
-        radial-gradient(700px 280px at 20% 30%, #ffb48a18, transparent 60%),
-        radial-gradient(600px 260px at 75% 35%, #89f0d118, transparent 60%),
-        radial-gradient(700px 300px at 50% 120%, #c3a1ff14, transparent 55%),
-        linear-gradient(180deg, #13163a, #0f1232);
-    }
+  width:100vw;
+  height:100vh;
+
+  transform: scale(var(--scale));
+  transform-origin: var(--origin);
+
+  /* IMPORTANT: expand the “virtual canvas” so scaled content fills screen */
+  width: calc(100vw / var(--scale));
+  height: calc(100vh / var(--scale));
+}
+
 
     /* CRT scanlines */
     .bar::before{
